#330 fixed overflow

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -89,25 +89,24 @@
     display: flex;
     flex-direction: row;
     height:100%;
-    width:80%;
+    width:100%;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
     background-color: white;
   }
 
-  .logo{
+  .logo-img-text{
     display:flex;
     flex:1 ;
-    flex-direction: column;
     height:100%;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     background-color:white;
     object-fit: 'contain';
   }
 
-  .logo > img {
+  .logo-img-text > img {
     max-width:100%;
     max-height:70%;
     width: auto;
